Revert usage of JDK 17 APIs
We need to start targeting bytecode 11 by default.

Bug: 284337751
Test: existing
Change-Id: I8dfe056182c8cbc1c58c5bdf628e4516b0bfc5ff

GitOrigin-RevId: 64dbe74aaa98eeb5ec16d284b040ded9b1851519